react-app/src/components/HomePage/HomePage.css
.home-artistTypes-scroll {
  display: flex;
  flex-direction: row;
  overflow-x: scroll;
  padding-bottom: 50px;
}

.home-artistTypes-div {
  position: relative;
  margin: 80px 20px;
}

.home-artistTypes-title {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  color: white;
  font-family: "Hind", sans-serif;
  font-size: 22px;
  font-weight: bolder;
  background-color: rgba(0, 0, 0, 0.365);
  height: 100%;
  width: 100%;
}

.home-artistTypes-scroll-title {
  font-family: "Hind", sans-serif;
  font-size: 45px;
  text-align: center;
  margin-top: 100px;
  font-weight: bolder;
}

.home-artistTypes-image-div {
  width: 210px;
  height: 280px;
  overflow-x: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
}

.home-artistTypes-image-div a {
  position: relative;
  width: 210px;
  height: 280px;
  overflow-x: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
}

.home-artistTypes-image {
  height: 100%;
  width: auto;
}

.home-page-header {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  width: 100%;
  height: 600px;
  overflow-y: hidden;
}

.home-page-header-title {
  color: white;
  font-family: "Hind", sans-serif;
  font-size: 45px;
  position: absolute;
  font-weight: bold;
  line-height: 1.3;
  background-color: rgba(0, 0, 0, 0.406);
  width: 100%;
  height: 100%;
  padding-top: 400px;
  padding-left: 200px;
}

.home-page-header img {
  width: 100%;
  height: auto;
}

.home-page-popular {
  background-color: #ffc328;
}

.home-page-popular-title {
  font-family: "Hind", sans-serif;
  font-size: 45px;
  font-weight: bold;
  text-align: center;
  color: white;
  padding-top: 100px;
}

.home-page-popular-artist-scroll {
  display: flex;
  overflow-x: scroll;
}

.home-page-usercard {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border-radius: 30px;
  background-color: white;
  padding-bottom: 30px;
  margin: 70px 30px 130px 30px;
}

.home-page-usercard a {
  text-decoration: none;
}

.home-page-usercard-name {
  font-family: "Hind", sans-serif;
  font-size: 20px;
  font-weight: bold;
  margin-top: 30px;
  text-decoration: none;
  color: black;
  text-align: center;
}

.home-page-usercard-image {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 220px;
  height: 200px;
  border-radius: 30px 30px 0 0;
  overflow: hidden;
  background-color: rgb(40, 40, 40);
}

.home-page-usercard-image img {
  width: 300px;
  height: auto;
}

.home-reviews-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding-bottom: 40px;
  background-color: #eeeeee;
}

.home-reviews-title {
  font-family: "Hind", sans-serif;
  font-size: 45px;
  font-weight: bold;
  margin-top: 100px;
}

.home-review-cards {
  margin-top: 50px;
  margin-left: -530px;
}

